<resources>

    <!-- GENERAL -->

    <string name="app_name">Plutus</string>

    <string name="credit">Credit</string>
    <string name="transactions">Transactions</string>
    <string name="transaction_detail">Transaction details</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="application">Application</string>

    <string name="close_drawer">Close</string>
    <string name="open_drawer">Open</string>
    <string name="filters">Filters</string>
    <string name="search">Search</string>
    <string name="find_a_transaction">Find a transaction</string>

    <string name="not_applicable_short">n/a</string>
    <string name="not_applicable_full">not applicable</string>
    <string name="not_in_beta">Not available in this beta</string>
    <string name="alpha_feature">Warning: alpha feature</string>

    <string name="language_system">System default</string>
    <string name="language_english">English (English)</string>
    <string name="language_dutch">Dutch (Nederlands)</string>
    <string name="language_french">French (Français)</string>

    <!-- DATE AND TIME -->

    <string name="on_date">on %1$s</string>
    <string name="at_time">at %1$s</string>
    <string name="on_timestamp">on %1$s at %2$s</string>

    <string name="january_short">Jan</string>
    <string name="february_short">Feb</string>
    <string name="march_short">Mar</string>
    <string name="april_short">Apr</string>
    <string name="may_short">May</string>
    <string name="june_short">Jun</string>
    <string name="july_short">Jul</string>
    <string name="august_short">Aug</string>
    <string name="september_short">Sep</string>
    <string name="october_short">Oct</string>
    <string name="november_short">Nov</string>
    <string name="december_short">Dec</string>
    <string name="january_full">January</string>
    <string name="february_full">February</string>
    <string name="march_full">March</string>
    <string name="april_full">April</string>
    <string name="may_full">May</string>
    <string name="june_full">June</string>
    <string name="july_full">July</string>
    <string name="august_full">August</string>
    <string name="september_full">September</string>
    <string name="october_full">October</string>
    <string name="november_full">November</string>
    <string name="december_full">December</string>

    <!-- IDENTIFICATION -->

    <string name="student_id">Student ID</string>
    <string name="password">Password</string>
    <string name="remember_me">Keep my session active</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="try_again">Try again</string>

    <string name="sign_in_using_your_student_credentials">Sign in using your student credentials</string>
    <string name="read_our_privacy_policy">Read our privacy policy</string>
    <string name="verifying_credentials">Verifying credentials…</string>
    <string name="populating_database">Populating database…</string>

    <string name="this_field_is_required">This field is required</string>
    <string name="this_id_is_too_short">This ID is too short</string>
    <string name="this_id_does_not_exist">This ID does not exist</string>
    <string name="password_is_incorrect">Password is incorrect</string>

    <!-- INTERACTION -->

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="dismiss">Dismiss</string>
    <string name="reset">Reset</string>
    <string name="pull_down_to_refresh">Pull down to refresh</string>

    <string name="database_setting_up">Setting up the database can take a while</string>
    <string name="database_updated">The database has been updated</string>
    <string name="plutus_has_not_yet_checked_your_credit">Plutus has not yet checked your current credit</string>
    <string name="no_internet_connection">You are working offline</string>
    <string name="there_is_no_active_internet_connection">There is no active internet connection</string>

    <!-- SETTINGS -->

    <string name="show_credit_gauge">Show credit gauge</string>
    <string name="visualy_display_your_current_credit">Graphically display your current credit</string>
    <string name="set_minimum">Set minimum</string>
    <string name="setting_minimum_message">This will be used as the gauge\'s minimum value.</string>
    <string name="set_maximum">Set maximum</string>
    <string name="settings_maximum_message">This will be used as the gauge\'s maximum value.</string>

    <string name="enable_notifications">Enable notifications</string>
    <string name="get_notified_about_your_credit">Get notified about your credit</string>

    <string name="set_home_screen">Set home screen</string>
    <string name="set_home_screen_message">Choose which window the application should start up with.</string>
    <string name="set_language">Override language</string>
    <string name="set_language_message">
        Some stored data will only be translated after updating your language preference on Intranet and erasing
        Plutus\' database.
    </string>

    <string name="reset_application">Reset application</string>
    <string name="reset_database">Reset database</string>
    <string name="reset_description">
        If Plutus seems malfunctioning or displays incorrect data, you can reset it here.
    </string>
    <string name="reset_info_application">
        Resetting the application requires Plutus to restart. The local copy of your transaction history and your
        personal preferences will be removed.
    </string>
    <string name="reset_info_database">
        Resetting the database requires Plutus to restart. The local copy of your transaction history will be removed.
    </string>


    <string name="reset_warning">
        Resetting the application will Plutus will remove all locally stored files such as databases and preferences.
    </string>
    <string name="reset_info">Plutus will now close.</string>

    <!-- ERROR MESSAGES -->

    <string name="something_went_wrong">
        Oops, something went wrong!
    </string>
    <string name="error_fetching_credit">
        Error fetching credit:\n\n
    </string>
    <string name="error_fetching_transactions">
        Error fetching transactions:\n\n
    </string>
    <string name="error_loading_data_into_app">
        Error loading data from API into application:\n\n
    </string>
    <string name="error_endpoint_verify">
        Plutus was unable to verify your credentials. Make sure that you are using the latest version of the
        application. If this
        problem persist, our servers might temporarily be down. Please try again later or consider contacting us about
        this issue.
    </string>
    <string name="error_endpoint_credit">
        Plutus was unable to check your remaining credit. The current data might be outdated.\n\nMake sure that you are
        using the latest version of the application. If this problem persist, our servers might temporarily be down.
        Please try
        again later or consider contacting us about this issue.
    </string>
    <string name="error_endpoint_transactions">
        Plutus was unable to check for new transactions. The current data might be outdated.\n\nMake sure that you are
        using the latest version of the application. If this problem persist, our servers might temporarily be down.
        Please try
        again later or consider contacting us about this issue.
    </string>
    <string name="error_loading_map">
        There was an error loading the map for this transaction. This should not prevent Plutus from working correctly,
        however.
    </string>
    <string name="error_loading_transaction">
        There was an error loading the details for this transaction. Make sure that you are using the latest version of
        Plutus. If this problem persist, please consider contacting us about this issue.
    </string>
    <string name="error_no_maps_app_installed">
        Looks like you don\'t have an app installed that could help you with directions to this campus. Go grab one
        quickly then come press our button again!
    </string>

    <!-- NOT YET LOCALIZED -->

    <string name="placeholder">placeholder — do not translate this</string>

</resources>
