<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/padding_form">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_list"
                android:layout_marginRight="@dimen/padding_activity_default"
                android:layout_marginBottom="@dimen/padding_header"
                android:layout_marginLeft="@dimen/padding_activity_default"
                android:text="@string/credit"
                style="@style/Plutus.RowHeader"/>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/app_settings_list_single_size"
                android:paddingRight="@dimen/padding_activity_default"
                android:paddingLeft="@dimen/padding_activity_default"
                android:id="@+id/pref_credit_gaugeSwitchWrapper"
                android:orientation="horizontal"
                android:weightSum="1"
                android:focusable="true"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:background="?android:attr/selectableItemBackground">

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical"
                    android:layout_weight="1">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/show_credit_gauge"
                        style="@style/Plutus.RowTitle"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/visualy_display_your_current_credit"
                        style="@style/Plutus.RowSubTitle"/>
            </LinearLayout>

            <android.support.v7.widget.SwitchCompat
                    android:id="@+id/pref_credit_gaugeSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    app:showText="false"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/pref_credit_gaugeMinMaxWrapper"
                android:weightSum="2">
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/app_settings_list_single_size"
                    android:layout_weight="1"
                    android:id="@+id/pref_credit_gaugeMinWrapper"
                    android:orientation="vertical"
                    android:weightSum="1"
                    android:focusable="true"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:background="?android:attr/selectableItemBackground">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/padding_activity_default"
                        android:paddingLeft="@dimen/padding_activity_default"
                        android:layout_marginTop="@dimen/app_settings_list_double_padding"
                        android:text="@string/set_minimum"
                        style="@style/Plutus.RowTitle"/>

                <TextView
                        android:id="@+id/pref_hintCreditGaugeMin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/padding_activity_default"
                        android:paddingLeft="@dimen/padding_activity_default"
                        style="@style/Plutus.RowSubTitle"
                        android:text="@string/not_applicable_short"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/app_settings_list_single_size"
                    android:layout_weight="1"
                    android:id="@+id/pref_credit_gaugeMaxWrapper"
                    android:orientation="vertical"
                    android:weightSum="1"
                    android:focusable="true"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:background="?android:attr/selectableItemBackground">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/app_settings_list_double_padding"
                        android:paddingRight="@dimen/padding_activity_default"
                        android:paddingLeft="@dimen/padding_activity_default"
                        android:text="@string/set_maximum"
                        style="@style/Plutus.RowTitle"/>

                <TextView
                        android:id="@+id/pref_hintCreditGaugeMax"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/padding_activity_default"
                        android:paddingLeft="@dimen/padding_activity_default"
                        style="@style/Plutus.RowSubTitle"
                        android:text="@string/not_applicable_short"/>
            </LinearLayout>
        </LinearLayout>

        <View
                style="@style/Plutus.Separator"
                android:layout_marginTop="@dimen/padding_border"/>

        <!-- NOTIFICATIONS -->

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_list"
                android:layout_marginRight="@dimen/padding_activity_default"
                android:layout_marginBottom="@dimen/padding_header"
                android:layout_marginLeft="@dimen/padding_activity_default"
                android:text="@string/notifications"
                style="@style/Plutus.RowHeader"/>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/app_settings_list_single_size"
                android:paddingRight="@dimen/padding_activity_default"
                android:paddingLeft="@dimen/padding_activity_default"
                android:id="@+id/pref_notifications_switchWrapper"
                android:orientation="horizontal"
                android:weightSum="1"
                android:focusable="true"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:background="?android:attr/selectableItemBackground">

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical"
                    android:layout_weight="1">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/enable_notifications"
                        style="@style/Plutus.RowTitle"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/get_notified_about_your_credit"
                        style="@style/Plutus.RowSubTitle"/>
            </LinearLayout>

            <android.support.v7.widget.SwitchCompat
                    android:id="@+id/pref_notifications_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    app:showText="false"/>
        </LinearLayout>

        <View
                style="@style/Plutus.Separator"
                android:layout_marginTop="@dimen/padding_border"/>

        <!-- APPLICATION -->

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_list"
                android:layout_marginRight="@dimen/padding_activity_default"
                android:layout_marginBottom="@dimen/padding_header"
                android:layout_marginLeft="@dimen/padding_activity_default"
                android:text="@string/application"
                style="@style/Plutus.RowHeader"/>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/app_settings_list_single_size"
                android:paddingRight="@dimen/padding_activity_default"
                android:paddingLeft="@dimen/padding_activity_default"
                android:id="@+id/pref_application_homeScreenWrapper"
                android:orientation="horizontal"
                android:weightSum="1"
                android:focusable="true"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:background="?android:attr/selectableItemBackground">

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical"
                    android:layout_weight="1">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/set_home_screen"
                        style="@style/Plutus.RowTitle"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/pref_application_homeScreenHint"
                        android:text="@string/not_applicable_full"
                        style="@style/Plutus.RowSubTitle"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/app_settings_list_single_size"
                android:paddingRight="@dimen/padding_activity_default"
                android:paddingLeft="@dimen/padding_activity_default"
                android:id="@+id/pref_application_languageWrapper"
                android:orientation="horizontal"
                android:weightSum="1"
                android:focusable="true"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:background="?android:attr/selectableItemBackground">

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical"
                    android:layout_weight="1">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/set_language"
                        style="@style/Plutus.RowTitle"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/pref_application_languageHint"
                        android:text="@string/not_applicable_full"
                        style="@style/Plutus.RowSubTitle"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/app_settings_list_container_button_padding"
                android:paddingRight="@dimen/padding_activity_default"
                android:paddingLeft="@dimen/padding_activity_default"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reset_description"
                    style="@style/Plutus.RowTitle"/>
            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="right">
                <Button
                        android:id="@+id/pref_application_buttonResetDatabase"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="@string/reset_database"/>
                <Button
                        android:id="@+id/pref_application_buttonResetApplication"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="@string/reset_application"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>